--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-<div class="container">
+
+<div class="container" style="text-align: center">
     <div class="row">
+        <button class="btn btn-primary" disabled>
+            <span class="spinner-grow spinner-grow-sm"></span>
+            Finding Trend!!..
+        </button>
+    </div>
+</div>
 
-        <div class="col-lg-4">
-
-            <div class="img-container">
-                <img id="image" src="TariqToon2.jpeg"/>
+<div class="container" style="margin-left:50px">
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-sm-4">
+                    <div class="img-container">
+                        <h2>About Me</h2>
+                        <h5>Photo of me:</h5>
+                        <img id="image" src="TariqToon2.jpeg"/>
+                    </div>
+                </div>
             </div>
-
         </div>
 
-        <div class="col-lg-8">
-
+        <div class="col-sm-8">
             <div class="tweet-container">
                 <div class="tweet-handle-container">
                     <div class="tweet-handle-image">
+                        <h2>TITLE HEADING</h2>
+                        <h5>Title description, Dec 7, 2017</h5>
                         <img id="user-image" src="https://st2.depositphotos.com/4284329/8270/v/950/depositphotos_82700158-stock-illustration-event-agency-logo.jpg" />
                     </div>
                     <div class="tweet-handle-name">
