--- a/public/index.html
+++ b/public/index.html
@@ -13,86 +13,123 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
 
-
-
-<div class="container" style="margin-left:50px">
-
-    <div class="row">
-        <div class="col-sm-12">
-              <button class="btn btn-primary">
-                        <span class="spinner-grow spinner-grow-sm"></span>
-                        Finding Trend!!..
-              </button>
-
+    <header>
+        <div class="container-fluid">
+                <h1>Bird's Eye View Tweet Wall</h1>
+                <p>View Live Tweet's Based on most Popular Trends!</p>
         </div>
-    </div>
+    </header>
 
-
-    <div class="row">
-        <div class="col-sm-4">
-
-            <div class="card">
-                <div class="card-body">
-                            <h2>About Me</h2>
-                            <h5>Photo of me:</h5>
-                            <img class="cartoon"  src="TariqToon2.jpeg"/>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="col-sm-8">
-            <div class="tweet-container">
-                <div class="tweet-handle-container">
-
-                    <div class="row">
-
-                        <div class="col-sm-12">
-                            <h2 id="user-name"></h2>
-                            <p id="user-description"></p>
+    <section>
+        <article>
+            <div class="row">
+                <div class="col-md-3" height="500">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Tweet News</h2>
+                            <h5>Share Your thoughts LIVE!!</h5>
+                            <img class="cartoon"  src="TariqToon2.jpeg" class=".rounded-circle" alt="Tariq Toon 2" height="700" width="580"/>
                         </div>
-
-                        <div class="col-sm-12">
-                            <div class="tweet-handle-image">
-
-
-
-                                <img id="user-image" src="https://st2.depositphotos.com/4284329/8270/v/950/depositphotos_82700158-stock-illustration-event-agency-logo.jpg" />
-                            </div>
-
-
-
-                            <div class="tweet-content" id="content">
-                                Let the tweets slide one by one
-                            </div>
-                        </div>
-
-
-                        <div class="col-sm-12">
-                            <img height="200" width="200" id="image">
-                        </div>
-
+                    </div>
                 </div>
 
 
+                    <div class="col-lg-8" class="rounded-circle" height="900" id="Whiteboard">
+                        <div class="tweet-container">
+                            <div class="tweet-handle-container">
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <div class="card-body">
+                                            <h2 id="user-name"></h2>
+                                            <p id="user-description"></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="tweet-container">
+                            <div class="tweet-handle-container">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="card-body">
+                                            <div class="tweet-handle-image">
+                                                <img id="user-image" src="https://st2.depositphotos.com/4284329/8270/v/950/depositphotos_82700158-stock-illustration-event-agency-logo.jpg" />
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="tweet-content" id="content">
+                                        Let the tweets slide one by one
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tweet-container">
+                            <div class="tweet-handle-container">
+                                <div class="col-md-4">
+                                    <img src="https://i.gifer.com/56iv.gif" class="rounded" height="300" width="300" id="image">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </article>
+    </section>
+
+    <section class="section_gap newsletter-area">
+        <div class="container-fluid subscribe-section">
+            <div class="row justify-content-center"style="background-color:black; opacity:0.7; width:1535px;>
+                <div class="col-lg-12">
+                    <div class="main-title">
+                        <h1>Join Our Newsletter</h1>
+                        <p>If you are looking for more updates and news, subscribe below!</p>
+                    </div>
+                </div>
             </div>
 
+        <div class="row newsletter_form justify-content-center">
+                <div class="col-lg-6 col-md-6 col-sm-6" >
+                    <div class="d-flex flex-row" id="mc_embed_signup">
+                        <form class="w-100" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+                              method="get">
+                            <div class="navbar-form">
+                                <div class="input-group add-on">
+                                    <input class="form-control" name="EMAIL" placeholder="Your email address" onfocus="this.placeholder = ''"
+                                           onblur="this.placeholder = 'Your email address'" required="" type="email">
+                                    <div style="position: absolute; left: -5000px;">
+                                        <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+                                    </div>
+                                    <div class="input-group-btn">
+                                        <button class="danger-btn text-uppercase">
+                                            Subscribe
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="info mt-20"></div>
+                        </form>
 
-    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-
-
-
-</div>
 <footer>
-    Bird's Eye View Twitter Wall <3
+    Bird's Eye View Tweet Wall <3
 </footer>
+
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script>
